--- a/create-admin.html
+++ b/create-admin.html
@@ -36,7 +36,7 @@
         }
         
         .logo h1 {
-            color: #667eea;
+            color: #11998e;
             font-size: 32px;
             margin-bottom: 5px;
         }
@@ -48,7 +48,7 @@
         
         .spinner {
             border: 4px solid #f3f3f3;
-            border-top: 4px solid #667eea;
+            border-top: 4px solid #11998e;
             border-radius: 50%;
             width: 40px;
             height: 40px;
